# sd-req

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: all.yml  cross.yml  nightly.yml  stable-workflow.yml
src/: main.rs  sd_req.rs
src/http/: http_fast_reqwest.rs  json.rs  json.rs.bak  mod.rs  path.rs  stringops.rs  types.rs
