[package]
name = "sd-req"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.9.5" } 
lazy_static="1.4.0"
unicode-segmentation="1.9.0"
chrono="0.4.19"
char_stream="0.1.8"
serde_json="1.0.96"
base64="0.21.0"
close-file="0.1.0"
sanitize-filename="0.5.0"
